Fix for the left scrollbar on the IE/EDGE. Beautification of the input buttons.

--- a/theme/custom.css
+++ b/theme/custom.css
@@ -46,9 +46,10 @@ h2, h3 {
     left: 0;
     background-color: #f5f5f5; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
+	-ms-overflow-style: none;
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
+	}
 .sidenav .dropdown-contents {
     width: 265px;
 }
@@ -60,6 +61,7 @@ h2, h3 {
     color: #105289;
     display: block;
     transition: 0.3s;
+	
 }
 .sidenav li {
 	display: block;
@@ -399,7 +401,7 @@ a.header-avatar span:after {
     padding: 5px;
 }
 .custombbcode {
-    border-radius: 0;
+    border-radius: 5px;
 }
 .custombbcode:before {
     border: none;
@@ -718,9 +720,11 @@ cite a {
 	border-radius: 0;
 }
 a.button1, input.button1, input.button3, a.button2, input.button2 {
-    color: #000;
-    background-color: #46bffb;
-	background-image:none;
+	color: #000;
+    background-color: #d4d4d4;
+    background-image: none;
+    border-radius: 5px;
+    padding: 5px;
 }
 a.button2, input.button2, input.button3,a.button1, input.button1 {
     border-color: transparent;
